--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -87,4 +87,5 @@ pre {
     padding:0px;
 }
 
-@import "~vditor/src/assets/scss/index"
+@import "~vditor/src/assets/scss/index";
+@import '~gitalk/dist/gitalk.css';
